--- a/css/partials/_menu.scss
+++ b/css/partials/_menu.scss
@@ -2,7 +2,9 @@ header{
     width: 100%;
     padding-top: 16px;
 }
-
+.logo{
+    max-width: 88px;
+}
 .navbar{
     max-width: 1440px;
     margin: 0 auto;
@@ -10,34 +12,81 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+
+    .nav-menu{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    
+    .nav-list{
+        list-style: none;
+        display: flex;
+    
+        li{
+            margin-left: 24px;
+        }
+    }
+    
+    .nav-link{
+        display: inline-block;
+    
+        font-size: 14px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        font-weight: 200;
+    
+        padding: 8px 16px;
+        position: relative;
+    
+        color: $gray-3;
+        transition: .3s ease;
+        &::after{
+            content: '';
+            display: block;
+            position: absolute;
+            top: -40px;
+            left: 50%;
+    
+            width: 2px;
+            height: 0px;
+    
+            transition: .3s ease;
+            background: linear-gradient(0deg, #E91E23 0%, rgba(226, 34, 38, 0) 100%);
+        }
+        &:hover{
+            color: $white-light;
+    
+    
+            &::after{
+                height: 40px;
+            }
+        }   
+    
+    } 
+
+
+    .nav-social{
+        display: flex;
+
+        svg{
+            cursor: pointer;
+            margin-left: 16px;
+            width: 24px;
+
+            path,circle{
+                transition: .7s ease;
+            }
+
+            &:hover{
+                path,circle{
+
+                    fill: $red-light;
+                    transform: translate3d(0,-3px,0);
+                }
+            }
+        }
+    }
 }  
 
-.nav-menu{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.nav-list{
-    list-style: none;
-    display: flex;
-
-    li{
-        margin-left: 24px;
-    }
-}
-
-.nav-link{
-    display: inline-block;
-
-    font-size: 14px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    font-weight: 200;
-
-    padding: 8px 16px;
-
-    // &::after{
-
-    // }
-}
