--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,143 @@ p {
   line-height: 140%;
 }
 
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 36px 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+}
+
+.container-item-1 {
+  max-width: 576px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.container-item-2 {
+  background: transparent;
+}
+
+.spiderman {
+  width: 140%;
+  -webkit-transform: translate3d(-180px, 0, 0);
+          transform: translate3d(-180px, 0, 0);
+}
+
+.btn {
+  display: inline-block;
+  padding: 12px 32px;
+  border-radius: 3px;
+  -webkit-transform: skew(-10deg);
+          transform: skew(-10deg);
+  text-transform: uppercase;
+  background: linear-gradient(267.72deg, #F02A2F 0.88%, #EA1D22 100%);
+  -webkit-transition: .7s ease;
+  transition: .7s ease;
+  position: relative;
+}
+
+.btn::after {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  width: 20%;
+  height: 70%;
+  border-radius: 3px;
+  border-top: 3px solid #fff;
+  border-left: 3px solid #fff;
+  opacity: 0;
+  -webkit-transition: .7s ease;
+  transition: .7s ease;
+}
+
+.btn::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  right: -2px;
+  width: 20%;
+  height: 70%;
+  border-radius: 3px;
+  border-bottom: 3px solid #fff;
+  border-right: 3px solid #fff;
+  opacity: 0;
+  -webkit-transition: .7s ease;
+  transition: .7s ease;
+}
+
+.btn:hover {
+  -webkit-transform: skewX(-10deg) scale(1.05);
+          transform: skewX(-10deg) scale(1.05);
+}
+
+.btn:hover::after {
+  opacity: 1;
+}
+
+.btn:hover::before {
+  opacity: 1;
+}
+
+.btn-secondary {
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 3px;
+  -webkit-transform: skewX(-10deg);
+          transform: skewX(-10deg);
+  -webkit-transition: .7 ease;
+  transition: .7 ease;
+  text-transform: uppercase;
+  background: transparent;
+  position: relative;
+  border: 2px solid #ea1d22;
+}
+
+.btn-secondary::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 0%;
+  height: 103%;
+  z-index: -1;
+  top: -1px;
+  left: -1px;
+  -webkit-transition: .7s ease;
+  transition: .7s ease;
+  background: linear-gradient(267.72deg, #F02A2F 0.88%, #EA1D22 100%);
+}
+
+.btn-secondary:hover::after {
+  width: 102%;
+}
+
 header {
   width: 100%;
   padding-top: 16px;
+}
+
+.logo {
+  max-width: 88px;
 }
 
 .navbar {
@@ -48,7 +182,7 @@ header {
           align-items: center;
 }
 
-.nav-menu {
+.navbar .nav-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -60,23 +194,72 @@ header {
           align-items: center;
 }
 
-.nav-list {
+.navbar .nav-list {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.nav-list li {
+.navbar .nav-list li {
   margin-left: 24px;
 }
 
-.nav-link {
+.navbar .nav-link {
   display: inline-block;
   font-size: 14px;
   letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: 200;
   padding: 8px 16px;
+  position: relative;
+  color: #959698;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+.navbar .nav-link::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -40px;
+  left: 50%;
+  width: 2px;
+  height: 0px;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  background: -webkit-gradient(linear, left bottom, left top, from(#E91E23), to(rgba(226, 34, 38, 0)));
+  background: linear-gradient(0deg, #E91E23 0%, rgba(226, 34, 38, 0) 100%);
+}
+
+.navbar .nav-link:hover {
+  color: #f4f7fb;
+}
+
+.navbar .nav-link:hover::after {
+  height: 40px;
+}
+
+.navbar .nav-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navbar .nav-social svg {
+  cursor: pointer;
+  margin-left: 16px;
+  width: 24px;
+}
+
+.navbar .nav-social svg path, .navbar .nav-social svg circle {
+  -webkit-transition: .7s ease;
+  transition: .7s ease;
+}
+
+.navbar .nav-social svg:hover path, .navbar .nav-social svg:hover circle {
+  fill: #f02a2f;
+  -webkit-transform: translate3d(0, -3px, 0);
+          transform: translate3d(0, -3px, 0);
 }
 /*# sourceMappingURL=style.css.map */
