--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -1,3 +1,5 @@
+
+
 .container{
     max-width: 1440px;
     margin: 0 auto;
@@ -7,9 +9,25 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-        overflow: hidden;
-}
 
+    height: 85vh;
+    overflow: hidden;
+    
+    @include responsive(){
+        flex-direction: column;
+        height: auto;
+        overflow: none;
+    }
+}
+.flex{
+    display: flex;
+}
+.w-auto{
+    width: auto;
+}
+.align-items-center{
+    align-items: center;
+}
 .container-item-1{
     max-width: 576px;
 
@@ -25,6 +43,11 @@
 .spiderman{
     width: 140%;
     transform: translate3d(-180px,0,0);
+
+    @include responsive(){
+        width: 100%;
+        transform: translate3d(0,0,0);
+    }
 }
 
 .btn{
