--- a/css/style.scss
+++ b/css/style.scss
@@ -4,12 +4,17 @@
     box-sizing: border-box;
     font-family: "Mukta", sans-serif;
 }
+@mixin responsive() {
+    @media screen and (max-width:960px) {
+        @content;
+    }
+}
 
 @import "partials/_colors.scss";
 body{
     width: 100%;
     height: 100vh;
-    background: #1a1a1a;
+    background: $blue-dark;
 }
 
 img, svg{
@@ -31,3 +36,6 @@ p{
 @import "partials/_layout.scss";
 @import "partials/_animations.scss";
 @import "partials/_menu.scss";
+@import "partials/_spacings.scss";
+
+@import "partials/_animations.scss";
